--- a/src/main/main.css
+++ b/src/main/main.css
@@ -6,8 +6,8 @@
 body {
   background-color: #121212;
   color: white;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
 }
 
 .views {
